# Desafio-I

./: Desafío I.pptx  Informe.docx
Desafio_I/: CMakeLists.txt  compresion.cpp  compresion.h  encriptacion.cpp  encriptacion.h  main.cpp  utils.cpp  utils.h
Proceso/Compresion_Encriptado/: CMakeLists.txt  main.cpp
Proceso/DescomprimidoLZ78/: main.cpp
Proceso/DescomprimidoRLE/: main.cpp
Proceso/DesencriptadoLZ78/: main.cpp
Proceso/DesencriptadoRLE/: main.cpp
Proceso/entrada/: CMakeLists.txt  main.cpp
